# freertos_s32k144evb_cmake

./: .cproject  .freertos_s32k144.g_c  .freertos_s32k144.g_x  .gitignore  .project  ProcessorExpert.pe  README.en.md  README.md
Debug_Configurations/: freertos_s32k144_debug_flash_jlink.launch  freertos_s32k144_debug_flash_pemicro.launch  freertos_s32k144_debug_ram_jlink.launch  freertos_s32k144_debug_ram_pemicro.launch
Documentation/: freertos_s32k144.txt  freertos_s32k144_Settings.previous.xml  freertos_s32k144_Settings.xml
Doxygen/: freertos.dox
Generated_Code/: Cpu.c  Cpu.h  FreeRTOSConfig.h  adc_pal1.c  adc_pal1.h  adc_pal_cfg.h  can_pal1.c  can_pal1.h  can_pal_cfg.h  clockMan1.c  clockMan1.h  dmaController1.c  dmaController1.h  lpTmr1.c  lpTmr1.h  lpspiCom1.c  lpspiCom1.h  lpuart1.c  lpuart1.h  pin_mux.c  pin_mux.h  sbc_uja116x1.c  sbc_uja116x1.h
Project_Settings/Linker_Files/: S32K1xx_flash_new.ld
SDK/middleware/sbc/sbc_uja116x/include/: sbc_uja116x_driver.h  sbc_uja116x_map.h
SDK/middleware/sbc/sbc_uja116x/source/: sbc_uja116x_driver.c
SDK/platform/devices/: callbacks.h  devassert.h  startup.c  startup.h
SDK/platform/devices/S32K144/include/: S32K144.h  S32K144_features.h
SDK/platform/devices/S32K144/startup/: system_S32K144.h
SDK/platform/drivers/inc/: flexcan_driver.h  lptmr_driver.h  pins_driver.h
SDK/platform/drivers/src/clock/S32K1xx/: clock_S32K1xx.c  clock_S32K1xx.h  pcc_hw_access.h  pmc_hw_access.h  scg_hw_access.h  sim_hw_access.h  smc_hw_access.h
SDK/platform/drivers/src/edma/: edma_driver.c
SDK/platform/drivers/src/flexcan/: flexcan_driver.c  flexcan_hw_access.c  flexcan_hw_access.h  flexcan_irq.c  flexcan_irq.h
SDK/platform/drivers/src/interrupt/: interrupt_manager.c
SDK/platform/drivers/src/lptmr/: lptmr_driver.c
SDK/platform/drivers/src/lpuart/: lpuart_driver.c
SDK/platform/drivers/src/pdb/: pdb_driver.c
SDK/platform/pal/inc/: adc_pal.h  adc_pal_mapping.h  can_pal.h  can_pal_mapping.h
SDK/platform/pal/src/adc/: adc_irq.c  adc_irq.h  adc_pal.c
SDK/platform/pal/src/can/: can_pal.c
SDK/rtos/FreeRTOS_S32K/Source/: event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
SDK/rtos/FreeRTOS_S32K/Source/include/: FreeRTOS.h
SDK/rtos/FreeRTOS_S32K/Source/portable/MemMang/: heap_2.c
Sources/: BoardDefines.h  Rte_Type.h  main.c  rtos.c
Sources/adc/: adc_app.c  adc_app.h
Sources/commu/: can_app.c  can_app.h  helper_functions.c  helper_functions.h  uart_app.c  uart_app.h
Sources/led/: LedControl.c  LedControl.h  Rte_LedControl_Type.h
cmake/: CMakeLists.txt  PreLoad.cmake  gcc_arm_eabi_toolchain.cmake
